<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:context=".model.loginRegiste.RegisterActivity" >

    <!-- 头部 -->

    <RelativeLayout
        android:id="@+id/rv_head"
        style="@style/relative_head"
        android:layout_width="match_parent" >

        <!-- 顶部导航栏 -->

        <RelativeLayout
            android:id="@+id/rv_login_hand_daohang"
            style="@style/daohanglan_relative" >

            <!-- 返回按钮 -->

            <ImageButton
                android:id="@+id/ibt_reg_back"
                style="@style/daohanglan_back_button" />
            <!-- Title文字 -->

            <TextView
                style="@style/handTextView"
                android:hint="@string/peompt_rec" />
        </RelativeLayout>
        <!-- 导航栏下面的一条线 -->

        <LinearLayout
            style="@style/daohanglan_down_line"
            android:layout_below="@id/rv_login_hand_daohang" >
        </LinearLayout>
    </RelativeLayout>

    <!-- 注册信息 -->

    <LinearLayout
        android:id="@+id/linearLayout1"
        style="@style/info_input_style"
        android:layout_below="@id/rv_head"
        android:background="@null"
        android:orientation="vertical"
        android:paddingTop="96dp" >

        <!-- 用户名 -->

        <RelativeLayout
            style="@style/info_input_smail_style"
            android:background="@null"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/iv_reg_username"
                style="@style/ImageViewUserName"
                android:src="@drawable/img_username" />

            <EditText
                android:id="@+id/et_reg_phone"
                style="@style/EditTextUserName"
                android:layout_toRightOf="@id/iv_reg_username"
                android:hint="@string/peompt_phone" />

            <LinearLayout style="@style/LineForEditTextDownLinearlayout" >
            </LinearLayout>
        </RelativeLayout>
        <!-- 密码 -->

        <RelativeLayout style="@style/info_input_smail_style" >

            <ImageView
                android:id="@+id/iv_reg_password"
                style="@style/ImageViewUserName"
                android:src="@drawable/img_passowrd" />

            <EditText
                android:id="@+id/et_reg_password"
                style="@style/EditTextPassword"
                android:layout_toRightOf="@+id/iv_reg_password"
                android:hint="@string/peompt_password" />

            <LinearLayout style="@style/LineForEditTextDownLinearlayout" />
        </RelativeLayout>

        <!-- 验证码模块 -->

        <RelativeLayout style="@style/info_input_smail_style" >

            <ImageView
                android:id="@+id/iv_reg_code"
                style="@style/ImageViewUserName"
                android:src="@drawable/img_getcode" />
            <!-- 输入框 -->

            <EditText
                android:id="@+id/et_reg_code"
                style="@style/getCode_editText_input"
                android:layout_toRightOf="@id/iv_reg_code"
                android:hint="@string/peompt_code" />

            <!-- 获取验证码的按钮 -->

            <Button
                android:id="@+id/bt_reg_getCode"
                style="@style/getCode_button_getcode"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:background="@drawable/bt_getcode"
                android:text="@string/peompt_getCode" />

            <LinearLayout
                style="@style/LineForEditTextDownLinearlayout"
                android:layout_marginRight="10dp" />
        </RelativeLayout>
        <Button
            android:id="@+id/bt_reg_rec"
            style="@style/button_tongyong"
            android:layout_below="@+id/iv_reg_code"
            android:layout_marginTop="19dp"
            android:background="@drawable/image_btn_press"
            android:text="@string/peompt_rec" />
    </LinearLayout>

</RelativeLayout>