<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bg"
    tools:context=".model.loginRegiste.NewPasswordActivity" >

    <!-- 头部 -->

    <RelativeLayout
        android:id="@+id/rv_head"
        style="@style/relative_head" >

        <!-- 顶部导航栏 -->

        <RelativeLayout
            android:id="@+id/rv_login_hand_daohang"
            style="@style/daohanglan_relative" >

            <!-- 返回按钮 -->

            <ImageButton
                android:id="@+id/ibt_forget_back"
                style="@style/daohanglan_back_button"
                android:visibility="visible" />
            <!-- Title文字 -->

            <TextView
                style="@style/handTextView"
                android:hint="@string/title_new_password" />
        </RelativeLayout>
        <!-- 导航栏下面的一条线 -->

        <LinearLayout
            style="@style/daohanglan_down_line"
            android:layout_below="@id/rv_login_hand_daohang" >
        </LinearLayout>
    </RelativeLayout>

    <!-- Login form -->
    <!-- 大框架style -->

    <LinearLayout
        android:id="@+id/about_version_code"
        style="@style/info_input_style"
        android:layout_below="@id/rv_head"
        android:paddingTop="20dp" >

        <!-- 用户名 -->

        <RelativeLayout style="@style/info_input_smail_style" >

            <ImageView
                android:id="@+id/iv_reg_password"
                style="@style/ImageViewUserName"
                android:src="@drawable/img_passowrd" />

            <EditText
                android:id="@+id/et_new_password"
                style="@style/EditTextPassword"
                android:layout_toRightOf="@+id/iv_reg_password"
                android:hint="@string/hint_new_password"
                android:inputType="none" />

            <LinearLayout style="@style/LineForEditTextDownLinearlayout" />
        </RelativeLayout>

        <Button
            android:id="@+id/bt_finish"
            style="@style/button_tongyong"
            android:layout_marginTop="60dp"
            android:background="@drawable/image_btn_press"
            android:text="@string/button_finish"
            android:textColor="#cb2f83"
            android:textSize="15sp" />
    </LinearLayout>

</RelativeLayout>